--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,7 +4,7 @@
     
 <h2>PIZZA</h2>
 
-<p> <marquee direction = "right" behaviour = "alternate">this is the home page </marquee> </p>
+<p> <center>this is the home page</center> </p>
 
 <img src="/static/images/download.jpg"
     width=10%
