changing code form pizza to tutor

--- a/app/templates/all_tutors.html
+++ b/app/templates/all_tutors.html
@@ -1,6 +1,7 @@
 {% extends 'layout.html' %}
 {% block content %}
 
+<h2 style="color:green;">ALL TUTORS AVAILABLE</h2>
 
 
 {% for Tutors in results %}
