--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -1,5 +1,5 @@
 <nav>
     <hr>
-    <a href='/'>Home</a> - <a href='/about'>About</a> - <a href='/contact'> Contacts</a> - <a href= '/all_levels'> Pizzas</a>
+    <a href='/'>Home</a> - <a href='/subjects'> Subjects</a> - <a href='/contact'> Contacts</a> - <a href= '/all_tutors'> Tutors</a>
     <hr>
 </nav>
