cleaning up my sgl links with database and code. made sure Names of table were the same and singular.

--- a/app/templates/all_tutors.html
+++ b/app/templates/all_tutors.html
@@ -1,11 +1,11 @@
 {% extends 'layout.html' %}
 {% block content %}
 
-<h2 style="color:green;">ALL TUTORS AVAILABLE</h2>
+<h2 style="color:green;">Page under construction</h2>
 
-
-{% for Tutors in results %}
-    {{Tutors[1]}} ({{Tutors[2]}})<br/>
+<br/>
+{% for Tutor in results %}
+<br/>
 
 {% endfor %}
 {% endblock %}
