--- a/app/templates/level.html
+++ b/app/templates/level.html
@@ -1,7 +1,7 @@
 {% extends "layout.html"}
 {% block content %}
 <h2>
-{{Pizza.name}}
+{{Level.name}}
 </h2>
 {{Pizza.description}}
 <p>all on a {{Pizza.Base_name}}</p>
