--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,15 +2,26 @@
 {% extends 'layout.html' %}'
 {% block content %}
     
-<h2>PIZZA</h2>
+<h2>Subjects in Level</h2>
 
-<p> <center>this is the home page</center> </p>
+<p>this is the home page</p>
 
-<img src="/static/images/download.jpg"
-    width=10%
-    height=10% />
-<img src="/static/images/catwaterhead.jpg"
-    width = 10%
-    height = 10% />
+<div class = main_buttons>
 
+<div class="row">
+    <div class="column">
+        <a href="/level/1"><img src="static/images/level1.jpg" class = "button"/>
+        </a>
+    
+        <a href="/level/2"><img src="static/images/Level2.jpg" class = "button"/>
+        </a>
+    
+        <a href="/level/2"><img src="static/images/Level3.jpg" class = "button"/>
+        </a>
+    </div>
+    </div>
+
+
+
+</div>
 {% endblock %}
