--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -36,3 +36,22 @@ h1{
     clear: both;
     display: table;
 }
+
+.subject{
+    text-align: center;
+    border-radius: 47px;
+    object-fit: cover;
+    width: 170px;
+    height: 80px;
+    margin-right: 80px;
+}
+
+.for_level::after {
+    content: "";
+    clear: both ;
+    display: table;
+}
+
+.subjects {
+    text-align: center;
+}
