--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -10,13 +10,13 @@
 
 <div class="row">
     <div class="column">
-        <a href="/level/1"><img src="static/images/level1.jpg" class = "button"/>
+        <a href="/level/1"><img src="/static/images/level1.jpg" class = "button"/>
         </a>
     
-        <a href="/level/2"><img src="static/images/Level2.jpg" class = "button"/>
+        <a href="/level/2"><img src="/static/images/Level2.jpg" class = "button"/>
         </a>
     
-        <a href="/level/2"><img src="static/images/Level3.jpg" class = "button"/>
+        <a href="/level/3"><img src="/static/images/Level3.jpg" class = "button"/>
         </a>
     </div>
     </div>
